# bitmap2svg

./:  CMakeLists.txt  .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_hook.py  build_hook_for_faiss.py  faiss_path_discovery_hook.py  get_faiss_paths.py  prepare_faiss_env.py  pyproject.toml  quick_start_with_gemma2.ipynb  setup.py
.github/workflows/: build.yml
_build_utils/: custom_backend.py
arishi/: README.md
bitmap2svg/: __init__.py
bitmap2svg/cpp/: bindings.cpp  bitmap_to_svg.cpp  bitmap_to_svg.h  cpp_svg_converter.cpp  cpp_svg_converter.h
cmake/: find_faiss_paths.py
nice/: README.md
nice/exp_code/: starvector_v1_fail.ipynb
nice/libs/bitmap2svg/: README.md  setup.py
nice/libs/bitmap2svg/bitmap2svg/: __init__.py
nice/libs/bitmap2svg/bitmap2svg/cpp/: bindings.cpp
nice/libs_quick_start_demos/: README.md
nice/libs_quick_start_demos/bitmap2svg/: README.md
nice/libs_quick_start_demos/bitmap2svg/v0.1.0/: quick_start_demo.py
nice/libs_quick_start_demos/bitmap2svg/v0.2.1/: quick_start_demo.py
nice/libs_quick_start_demos/bitmap2svg/v0.2.3/: quick_start_demo.py
nice/libs_quick_start_demos/bitmap2svg/v0.2.4/: quick_start_demo.py
nice/paper/.me/: StableDiffusion.md
nice/paper/.me/stable_diffusion/: cross_attention.py  sd_block_diagram.excalidraw
nice/paper/CLIPasso/: README.md
nice/paper/DiffSketcher/: README.md
nice/paper/DiffVG/: README.md
nice/paper/SVGDreamer/: README.md
nice/paper/VectorFusion/: README.md
nice/paper/bezier_splatting_for_fast_and_differentiable_vector_graphics_rendering/: README.md
nice/paper/livesketch/: README.md
nice/paper/stable_diffusion/: README.md
nice/paper/stable_diffusion/stable_diffusion/: sd_block_diagram.excalidraw
nice/submit_draft/: gemma3_12b_it.ipynb  quick_start_with_gemma2_v7.ipynb  quick_start_with_gemma2_v9.ipynb
nice/submit_draft/gemma2/: Gemma2.py  quick_start_with_gemma2_fresh.ipynb  quick_start_with_gemma2_v12.ipynb  quick_start_with_gemma2_v9.ipynb
nice/submit_draft/gemma3/: Gemma3.py  gemma3.ipynb
nice/submit_draft/qwq_rl/: QwQ.py  qwq_rl_v1.ipynb
nice/submit_draft/stable_diffusion/: Bitmap2SVGConverter.py  DiffusionModelConfig.py  README.md  StableDiffusionModel.py  StableDifussion.py  infer_param_tuning_log.md  infer_param_tuning_log.txt  requirements.txt
nice/submit_draft/stable_diffusion/toys/latent2svg/: latent_to_svg.py  run_example.py
nice/submit_draft/stable_diffusion/toys/text2svg/: README.md  control_experimental_group.py  text2svg_2_opt_3_lpips.ipynb  text2svg_2_opt_3_lpips_2.ipynb  text_to_svg.py  text_to_svg_2.py  text_to_svg_2_opt.py  text_to_svg_2_opt_2.py  text_to_svg_2_opt_3.py  text_to_svg_2_opt_3_coopt_differentiable.py  text_to_svg_2_opt_3_lpips.py  text_to_svg_2_opt_3_lpips_2.py  text_to_svg_2_opt_3_lpips_clip.py  text_to_svg_2_opt_3_lpips_clip_textimg.py  text_to_svg_2_opt_3_lpips_clip_textimg_2.py  text_to_svg_2_opt_3_lpips_clip_textimg_gradualy_guidance.py  text_to_svg_2_opt_3_lpips_clip_textimg_progressive_guidance.py  text_to_svg_2_opt_3_lpips_co_opt.py  text_to_svg_2_opt_3_lpips_coopt.py  text_to_svg_2_opt_3_perceploss_vgg.py  text_to_svg_2_opt_3_use_opt.py  text_to_svg_2_tpu.py  text_to_svg_3.py
nice/submit_draft/stable_diffusion/toys/text2svg/exp_2_opt_3_lpips_clip_textimg_progressive_guidance/: README.md
nice/submit_draft/stable_diffusion/toys/ttext2svg/: README.md  vlm_text_to_svg_2.py
nice/submit_draft/stable_diffusion/toys/vlm_text2svg/: README.md  clip_download.py  vlm_text_to_svg.py  vlm_text_to_svg_2.py  vlm_text_to_svg_3.py  vlm_text_to_svg_3_adapter.py  vlm_text_to_svg_4.py
patches/: external_faiss_sources_cmakelists.diff  external_faiss_sources_faiss_gpu_cmakelists.diff
python_bitmap_to_svg/: __init__.py
shared/: README.md  memo_20250319_nice.md  memo_20250321_nice.md
shared/template_code/: README.md  quick_start_basic.ipynb  quick_start_with_gemma2.ipynb
src/: bitmap_to_svg.cpp  bitmap_to_svg.h
