[build-system]
requires = [
    "scikit-build-core>=0.8",
    "cmake>=3.18",
    "ninja",
    "pybind11[global]>=2.10",
    "faiss-gpu>=1.7.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "bitmap2svg"
version = "0.2.3.2"
description = "A library to convert bitmaps to SVG, using C++, OpenCV, with potential CUDA/FAISS GPU acceleration."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Xiaonan (Nice) Wang", email = "wangxiaonannice@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: Converters",
    "Topic :: Scientific/Engineering :: Image Processing"
]
keywords = ["svg", "bitmap", "vectorization", "gpu", "cuda", "faiss", "opencv", "image processing"]

dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "faiss-gpu>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/Opensource-Nice-Arishi/kaggle_drawing_with_LLMs/tree/bitmap2svg-cu-v0.2.3.2"

[tool.scikit-build]
cmake.source-dir = "."
# IMPORTANT: Add these lines to pass Faiss paths to CMake
cmake.args = [
    "-DPYTHON_FAISS_INCLUDE_DIR=$$(python -c \"import faiss, os; print(os.path.join(os.path.dirname(faiss.__file__), 'include'))\")",
    "-DPYTHON_FAISS_LIBRARY_PATH=$$(python -c \"import faiss, os; lib_path = ''; for root, dirs, files in os.walk(os.path.dirname(faiss.__file__)): for file in files: if file.startswith('libfaiss_gpu') and (file.endswith('.so') or file.endswith('.dylib') or file.endswith('.dll')): lib_path = os.path.join(root, file); break; if lib_path: break; print(lib_path)\")",
    "-DPYTHON_FAISS_IS_GPU_ENABLED=ON"
]