[build-system]
requires = [
    "scikit-build-core>=0.8",
    "cmake>=3.18",
    "ninja",
    "pybind11[global]>=2.10",
    "faiss-gpu>=1.7.0"
]
build-backend = "scikit_build_core.build"

[project]
name = "bitmap2svg"
version = "0.2.3.2"
description = "A library to convert bitmaps to SVG, using C++, OpenCV, with potential CUDA/FAISS GPU acceleration."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Xiaonan (Nice) Wang", email = "wangxiaonannice@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Topic :: Multimedia :: Graphics :: Converters",
    "Topic :: Scientific/Engineering :: Image Processing"
]
keywords = ["svg", "bitmap", "vectorization", "gpu", "cuda", "faiss", "opencv", "image processing"]

dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "faiss-gpu>=1.7.0"
]

[project.urls]
Homepage = "https://github.com/Opensource-Nice-Arishi/kaggle_drawing_with_LLMs/tree/bitmap2svg-cu-v0.2.3.2"

[tool.scikit-build]
cmake.source-dir = "."
# IMPORTANT: Use a Python script to reliably get Faiss paths
# The output of this command will be split by whitespace and added to CMake's arguments.
cmake.args = ["$$(python get_faiss_paths.py)"]