[build-system]
requires = [
    "scikit-build-core>=0.7", 
    "cmake>=3.18",            
    "ninja",                  
    "opencv-python",          
    "pybind11[global]>=2.6"   
]
build-backend = "scikit_build_core.build"

[project]
name = "bitmap2svg"
version = "0.2.4.1"
description = "A library to convert bitmaps to SVG, using C++ and OpenCV."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Xiaonan (Nice) Wang", email = "wangxiaonannice@gmail.com" }
]

dependencies = [
    "numpy",          
    "opencv-python"   
]

[project.urls]
Homepage = "https://github.com/Opensource-Nice-Arishi/kaggle_drawing_with_LLMs/tree/bitmap2svg-v0.2.4.1"

[tool.scikit-build]
cmake.source-dir = "." 
wheel.packages = ["bitmap2svg"]